--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "autoprefixer": "^9.8.6",
     "eslint": "^7.21.0",
     "eslint-plugin-react": "^7.22.0",
