--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended"
   ],
   "parserOptions": {
@@ -19,6 +20,7 @@
   ],
   "rules": {
     "react/jsx-first-prop-new-line": ["error", "multiline"],
+    "react/prop-types": "off",
     "semi": ["error", "never"]
   }
 }
